--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="black-bar">
 		<div class="fixed-container">
-			Самые <a href="#">свежие новости</a> в реальном времени
+			Самые <a href="#">свежие новости</a> в реальном времени11
 			<div id="datetime">12:30 19.06.2018</div>
 		</div>
 	</div>
