--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="MobileOptimized" content="320"/>
 	<meta name="HandheldFriendly" content="true"/>
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="styles-media.css">
 	<script src="jquery-3.3.1.min.js"></script>
