--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Новостное агентство</title>
 	<meta charset="utf-8">
+	<meta name="yandex-verification" content="01d7b705b551d998"/>
 	<meta name="MobileOptimized" content="320"/>
 	<meta name="HandheldFriendly" content="true"/>
 	<meta name="viewport" content="width=device-width">
