--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					</div><br>
 					
 					<h3>
-						В Крыму отреагировали на слова Кравчука о&nbsp;возврате полуострова
+						В Крыму отреагировали на&nbsp;слова Кравчука о&nbsp;возврате полуострова
 					</h3><br>					
 
 					<div class="castle-data-time">
