--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 			</section>
 
 			<aside id="column-right">
-				<img src="img/banner-1.png" alt="banner-1">
+				<img src="img/banner-1.png" alt="banner-1" style="height: 400px;">
 				<img src="img/banner-2.png" alt="banner-2">
 			</aside>
 		</div>
